# pg-grid-netlist-gen

./: .gitignore  AGENTS.md  BUFX12.spi  CLAUDE.md  DCAP32.spi  DCAPX32.spi  README.md  config.yaml  freepdk3_rctyp.itf  grid_specs.yaml  pg-grid-netlist-gen.bat  pg_grid_netlist_gen  pg_grid_netlist_gen.yaml  pyproject.toml  run_claude
.githooks/: pre-commit
docs/: configuration.md  power_grid.html
output/: pg_grid_summary.txt  power_grid.sp
src/pg_grid_netlist_gen/: __init__.py  __main__.py  cli.py  config.py  geometry.py  grid_builder.py  itf_parser.py  netlist.py  physics.py  reporter.py  visualize.py
